<resources>
    <string name="app_name">Bla Bla Wild</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Rechercher</string>
    <string name="rechercher">Rechercher un itinéraire</string>
    <string name="depart">Départ</string>
    <string name="destination">Destination</string>
    <string name="londre">Londres</string>
    <string name="date">Date</string>
    <string name="button">Bouton</string>
    <string name="ddd">21/02/2017-16:00</string>
    <string name="text">TexteView</string>
</resources>
